Eclipse 'problems': JavaDoc, extra commas, unnecessary else clauses.